# detect_moment_to_speak

./: .gitignore  README.md  collect_audio_files.py  pyproject.toml  test.py  test_cuda.py
src/detect_moment_to_speak/: inference.py  model.py  preprocessing.py  train.py
