[tool.poetry]
name = "detect-moment-to-speak"
version = "0.1.0"
description = "A project to detect the right moments to speak"
authors = ["Alexandre Perdereau <alexandre.perdereau.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
librosa = "^0.10.2.post1"
webrtcvad = "^2.0.10"
transformers = "^4.41.2"
soundfile = "^0.12.1"
pandas = "^2.2.2"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-win_amd64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
